<resources>
    <string name="app_name">MyHwaHae</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home -->
    <string name="title_home">Home</string>
    <string name="title_review">Review</string>
    <string name="title_ingredient">Ingredient</string>
    <string name="title_hwaple">Hwaple</string>

    <!-- My Page -->
    <string name="title_mypage">My Page</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_people">people</string>
    <string name="title_change_info">CHANGE INFO</string>
    <string name="title_settings">SETTINGS</string>
    <string name="title_like">Like</string>
    <string name="title_brand">Brand</string>
    <string name="title_product">Product</string>
    <!-- <string name="title_ingredient">Ingredient</string> -->
    <string name="title_user">User</string>
    <string name="title_my_activity">My Activity</string>
    <string name="title_analysis">Analysis</string>
    <string name="title_ask_for">Ask For</string>
    <string name="title_my_review">My Review</string>
    <string name="title_scrap">Scrap</string>
</resources>
