<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.riverpearl.myhwahae.MypageActivity">

    <FrameLayout
        android:id="@+id/frame_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:title=""
            android:background="@color/colorMain" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_mypage"
            android:textColor="@color/colorMainText"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linear_profile"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="@dimen/image_progile_width"
            android:layout_height="@dimen/image_profile_height"
            android:id="@+id/image_profile"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/mypage_profile_image_top_margin"
            android:layout_marginBottom="@dimen/mypage_profile_image_bottom_margin"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/text_name"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/text_age"
                android:background="@drawable/user_detail_text_background"
                android:textColor="@color/colorMain" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/text_skin_type"
                android:background="@drawable/user_detail_text_background"
                android:textColor="@color/colorMain" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/text_trouble"
                android:background="@drawable/user_detail_text_background"
                android:textColor="@color/colorMain" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/mypage_linear_top_margin"
            android:layout_marginBottom="@dimen/mypage_linear_bottom_margin"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageView"
                android:src="@drawable/mypage_like"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/title_like"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="0"
                android:id="@+id/text_like"
                android:layout_marginLeft="@dimen/text_like_left_margin"
                android:layout_marginRight="@dimen/text_like_right_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/title_people"
                android:id="@+id/textView2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/mypage_buttons_bottom_margin">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_change_info"
                android:id="@+id/button"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/btn_mypage_margin" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_settings"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/btn_mypage_margin" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_profile"
        app:orientation="horizontal"
        app:columnCount="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_favorite"
            android:textColor="@color/colorBlack"
            android:paddingTop="@dimen/mypage_grid_padding"
            android:paddingBottom="@dimen/mypage_grid_padding"
            android:paddingLeft="@dimen/mypage_grid_left_padding"
            android:background="@color/colorSub"
            app:layout_columnWeight="4"
            app:layout_columnSpan="4"
            app:layout_rowWeight="1"
            app:layout_gravity="fill_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/mypage_grid_content_padding"
            android:paddingBottom="@dimen/mypage_grid_content_padding"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_brand"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/text_brand"
                android:textColor="@color/colorRed"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/mypage_grid_content_padding"
            android:paddingBottom="@dimen/mypage_grid_content_padding"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_product"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/text_product"
                android:textColor="@color/colorRed"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/mypage_grid_content_padding"
            android:paddingBottom="@dimen/mypage_grid_content_padding"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_ingredient"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/text_ingredient"
                android:textColor="@color/colorRed"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/mypage_grid_content_padding"
            android:paddingBottom="@dimen/mypage_grid_content_padding"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_user"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/text_user"
                android:textColor="@color/colorRed"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_my_activity"
            android:textColor="@color/colorBlack"
            android:paddingTop="@dimen/mypage_grid_padding"
            android:paddingBottom="@dimen/mypage_grid_padding"
            android:paddingLeft="@dimen/mypage_grid_left_padding"
            android:background="@color/colorSub"
            app:layout_columnWeight="4"
            app:layout_columnSpan="4"
            app:layout_rowWeight="1"
            app:layout_gravity="fill_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/mypage_grid_content_padding"
            android:paddingBottom="@dimen/mypage_grid_content_padding"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_analysis"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/text_analysis"
                android:textColor="@color/colorRed"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/mypage_grid_content_padding"
            android:paddingBottom="@dimen/mypage_grid_content_padding"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_ask_for"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/text_ask_for"
                android:textColor="@color/colorRed"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/mypage_grid_content_padding"
            android:paddingBottom="@dimen/mypage_grid_content_padding"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_my_review"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/text_my_review"
                android:textColor="@color/colorRed"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/mypage_grid_content_padding"
            android:paddingBottom="@dimen/mypage_grid_content_padding"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_scrap"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/text_scrap"
                android:textColor="@color/colorRed"/>

        </LinearLayout>

    </android.support.v7.widget.GridLayout>


</RelativeLayout>
